# advent-of-code-2024

./: Cargo.toml  LICENSE  README.md
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  lib.rs  main.rs
